--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "web3": "^1.7.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "husky": "^8.0.1",
     "postcss": "^8.4.16",
     "typescript": "4.7.4"
   }
