--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "yarn husky install"
   },
   "dependencies": {
     "@fontsource/montserrat": "^4.5.11",
