--- a/.env.local.example
+++ b/.env.local.example
@@ -4,4 +4,6 @@ NEXT_PUBLIC_FORTMATIC_KEY=
 
 NEXT_PUBLIC_MUON_NODE_GATEWAY=https://node-balancer.muon.net/v1/
 
+NEXT_PUBLIC_ANKR_KEY=
+
 NEXT_PUBLIC_MODE=local
